From ffc1266 (pyuvdata):
=======================

In prisim/interferometry.py,

(*) In member function __init__() of class InterferometerData, convert
antenna location from ENU to ECEF coordinates and store in key
'antenna_positions'

From a147da6 (pyuvdata):
=======================

In setup.py,

(*) Modify pyuvdata package version requirement to be >=1.1

In prisim/interferometry.py,

(*) Import pyuvdata
(*) Update member function __init__() of class InterferometerData
to be backwards compatible with versions of pyuvdata earlier than 1.3

From 4431f33 (master):
=====================

In setup.py,

(*) Modify pyuvdata package version requirement to be >=1.3

In prisim/interferometry.py,

(*) In member function __init__() of class InterferometerData, add
attribute integration_time as an array of shape (Nblts,) instead of
a scalar number (as in pyuvdata v1.1)

From 1d5505c (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add option to specify sky model as 'noise'

In scripts/run_prisim.py,

(*) Accommodate ability to run sky model that looks like random
Gaussian noise

From 26dbdb0 (master):
=====================

In prisim/bispectrum_phase.py,

(*) Import reduce from functools module
(*) Add member functions rescale_power_spectrum() and
average_rescaled_power_spectrum() to class ClosurePhaseDelaySpectrum
with docstrings to rescale the power spectrum of ratio to power of a
quantity with physical units and to average this rescaled power along
the specified axes respectively. Update docstring accordingly
(*) Include values under keys 'fftpow' in output of member function
FT() of class ClosurePhaseDelaySpectrum. Update member function
docstring accordingly
(*) Include values under keys 'fftpow', 'freq_center', 'freq_wts',
'bw_eff', 'shape', 'lag_corr_length' and 'fftpow' in output dictionary 
of member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum. Update member function docstring
accordingly.